fixed nav li overlapping padding

--- a/style.css
+++ b/style.css
@@ -73,11 +73,11 @@ img {
         padding: 0;
         margin: 0;
         display: flex;
-        /* align-content: flex-start;*/
     }
 
     nav ul li {
         list-style: none;
+        padding: 0 16px;
     }
 
     nav a {
